--- a/index.html
+++ b/index.html
@@ -110,12 +110,16 @@
     <button onclick="showSection('wish')">💌 Read Your Wish</button>
     <button onclick="showSection('game')">🎯 Score Game</button>
     <button onclick="showSection('questions')">🧠 Romantic Questions</button>
-    <button onclick="showSection('gift')">🎁 Surprise Gift</button>
+    <button onclick="showSection('gift')">🏱 Surprise Gift</button>
     <button onclick="fireworks()">🎇 Fireworks</button>
   </div>
 
   <div id="wish" class="section">Tum meri zindagi, mera sukoon, mera sab kuch ho. I love you ❤️</div>
-  <div id="game" class="section">Romantic score game will be here soon 😘</div>
+
+  <div id="game" class="section">
+    ✨ Let's play a fun game soon! Your love score is rising every second we're together. 😘
+  </div>
+
   <div id="questions" class="section">
     <ul style="list-style: none; padding: 0;">
       <li>❤️ What's your favorite memory of us?</li>
@@ -125,8 +129,9 @@
       <li>💑 One thing you want us to do together this year?</li>
     </ul>
   </div>
+
   <div id="gift" class="section">
-    🎉 Here's your surprise: You are getting a romantic dinner plan, a photo collage gift, and a day full of love notes hidden around your favorite places. 💝
+    🎉 Here's your surprise: your gift is my forever love,loyalty and care for you my baby mela bachaa ilobeyou so muchhhhhhhhh 💕
   </div>
 
   <audio autoplay loop>
