--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <button onclick="fireworks()">🎇 Fireworks</button>
   </div>
 
-  <div id="wish" class="section">Tum meri zindagi, mera sukoon, mera sab kuch ho. I love you ❤️</div>
+  <div id="wish" class="section">happy birthday my little baby🍰♡ ༘*.ﾟ🧸🎀.happy birthday to the girl i have known for so long the most beautiful the most loving,caring girl i know and i am glad to tell everyone that she is my wife.happy birthday mominaaaaaaaaa 🎉🎂🎀💗🥳.ALLAH MERI JAAAN KO LAMBI ZINDGI DY ALLAH MERI JAAN KO HAMESHA KHUSH RKHY MY BABY ILOVEYOU SO MUCH.THE WAS I HOPE THE LAST BIRTHDAY OF YOURS INSHALLAH NEXT BIRTHDAY WE WILL CELEBRATE TOGERTHER I WILL BE DONE WITH MY GRADUATION AND WILL BE THERE INSHALLAH.Tum meri zindagi, mera sukoon, mera sab kuch ho. I love you.AND ONCE AGAIN HAPPY BIRTHDAY MELA BACHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA₊˚⊹♡🍰🍓♡⊹˚₊ ❤️</div>
 
   <div id="game" class="section">
     ✨ Let's play a fun game soon! Your love score is rising every second we're together. 😘
@@ -131,7 +131,7 @@
   </div>
 
   <div id="gift" class="section">
-    🎉 Here's your surprise: your gift is my forever love,loyalty and care for you my baby mela bachaa ilobeyou so muchhhhhhhhh 💕
+    🎉 Here's your surprise: your gift is my forever love,loyalty and care for you my baby mela bachaa ilobeyou so muchhhhhhhhh .I ASKED JAVERIA TO GIVE YOU A NICE RED BIG BOUTIQUE OF RED ROSES .AND I PROMISE MERI JAAAN WHEN YOU WILL BE IN PAKISTAN I WILL ARRANGE YOUR BITHDAY WE GONNA CHILL TOGETHER HAVE SO MUCH FUN TOGETHER .ABI TO DOOSRON KO BOLNA PRTA HAI I WILL ARRANGE A SURPRISE GIFT AN ACTUAL GIFT FOR YOU I PROMISE💕
   </div>
 
   <audio autoplay loop>
